<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_screen_content_background_color"
    android:orientation="vertical"
    android:padding="@dimen/main_screen_content_padding"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/card_view_marginStartEnd"
            android:layout_marginEnd="@dimen/card_view_marginStartEnd"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            app:cardCornerRadius="@dimen/card_view_corner_radius"
            app:cardElevation="@dimen/card_view_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:background="@android:color/white"
                android:padding="@dimen/card_view_content_padding">

                <ImageView
                    android:id="@+id/iv_main"
                    android:layout_width="@dimen/identification_image_size"
                    android:layout_height="@dimen/identification_image_size"
                    android:layout_marginEnd="@dimen/identification_image_marginEnd"
                    android:contentDescription="@string/image_contentDescription"
                    app:srcCompat="@drawable/snowflake" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/primary_text_color"
                        android:textSize="@dimen/label_text_size"
                        android:textStyle="bold"
                        tools:text="Weather" />

                    <TextView
                        android:id="@+id/tv_main_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/secondary_text_color"
                        android:textSize="@dimen/value_text_size"
                        tools:text="condition" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/card_view_marginStartEnd"
            android:layout_marginEnd="@dimen/card_view_marginStartEnd"
            android:layout_weight="1"
            android:background="@android:color/white"
            app:cardCornerRadius="@dimen/card_view_corner_radius"
            app:cardElevation="@dimen/card_view_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:background="@android:color/white"
                android:padding="@dimen/card_view_content_padding">

                <ImageView
                    android:id="@+id/iv_humidity"
                    android:layout_width="@dimen/identification_image_size"
                    android:layout_height="@dimen/identification_image_size"
                    android:layout_marginEnd="@dimen/identification_image_marginEnd"
                    android:contentDescription="@string/image_contentDescription"
                    app:srcCompat="@drawable/humidity" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_temp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/primary_text_color"
                        android:textSize="@dimen/label_text_size"
                        android:textStyle="bold"
                        tools:text="Degree" />

                    <TextView
                        android:id="@+id/tv_humidity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/secondary_text_color"
                        android:textSize="@dimen/value_text_size"
                        tools:text="per cent" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/card_view_marginTop"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/card_view_marginStartEnd"
            android:layout_marginEnd="@dimen/card_view_marginStartEnd"
            android:layout_weight="1"
            android:background="@android:color/white"
            app:cardCornerRadius="@dimen/card_view_corner_radius"
            app:cardElevation="@dimen/card_view_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:background="@android:color/white"
                android:padding="@dimen/card_view_content_padding">

                <ImageView
                    android:id="@+id/iv_visibility"
                    android:layout_width="@dimen/identification_image_size"
                    android:layout_height="@dimen/identification_image_size"
                    android:layout_marginStart="@dimen/identification_image_marginEnd"
                    android:layout_marginEnd="@dimen/identification_image_marginEnd"
                    android:contentDescription="@string/image_contentDescription"
                    app:srcCompat="@drawable/ic_visibility_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_visibility"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/primary_text_color"
                        android:textSize="@dimen/label_text_size"
                        android:textStyle="bold"
                        tools:text="Visibility" />

                    <TextView
                        android:id="@+id/tv_visibility_unit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/visibility_distance"
                        android:textColor="@color/secondary_text_color"
                        android:textSize="@dimen/value_text_size"
                        tools:text="KM" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/card_view_marginStartEnd"
            android:layout_marginEnd="@dimen/card_view_marginStartEnd"
            android:layout_weight="1"
            android:background="@android:color/white"
            app:cardCornerRadius="@dimen/card_view_corner_radius"
            app:cardElevation="@dimen/card_view_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:background="@android:color/white"
                android:padding="@dimen/card_view_content_padding">

                <ImageView
                    android:id="@+id/iv_wind"
                    android:layout_width="@dimen/identification_image_size"
                    android:layout_height="@dimen/identification_image_size"
                    android:layout_marginEnd="@dimen/identification_image_marginEnd"
                    android:contentDescription="@string/image_contentDescription"
                    app:srcCompat="@drawable/wind" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_speed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/primary_text_color"
                        android:textSize="@dimen/label_text_size"
                        android:textStyle="bold"
                        tools:text="Wind" />

                    <TextView
                        android:id="@+id/tv_speed_unit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/km_per_hour"
                        android:textColor="@color/secondary_text_color"
                        android:textSize="@dimen/value_text_size" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/card_view_marginStartEnd"
        android:layout_marginTop="@dimen/card_view_marginTop"
        android:layout_marginEnd="@dimen/card_view_marginStartEnd"
        android:background="@android:color/white"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        app:cardElevation="@dimen/card_view_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:padding="@dimen/card_view_content_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_location"
                    android:layout_width="@dimen/identification_image_size"
                    android:layout_height="@dimen/identification_image_size"
                    android:layout_marginEnd="@dimen/identification_image_marginEnd"
                    android:contentDescription="@string/image_contentDescription"
                    app:srcCompat="@drawable/location" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/primary_text_color"
                        android:textSize="@dimen/label_text_size"
                        android:textStyle="bold"
                        tools:text="Name" />

                    <TextView
                        android:id="@+id/tv_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/secondary_text_color"
                        android:textSize="@dimen/value_text_size"
                        tools:text="Country" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_margin="@dimen/divider_margin"
                android:background="@color/divider_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginEnd="@dimen/sunset_marginStart">

                    <TextView
                        android:id="@+id/tv_Sunrise"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/sunrise"
                        android:textColor="@color/primary_text_color"
                        android:textSize="@dimen/label_text_size"
                        android:textStyle="bold"
                        tools:text="Sunrise" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/sunset_marginStart"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_sunrise"
                            android:layout_width="@dimen/identification_image_size"
                            android:layout_height="@dimen/identification_image_size"
                            android:layout_marginEnd="@dimen/identification_image_marginEnd"
                            android:contentDescription="@string/image_contentDescription"
                            app:srcCompat="@drawable/sunrise" />

                        <TextView
                            android:id="@+id/tv_sunrise_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/secondary_text_color"
                            android:textSize="@dimen/value_text_size"
                            tools:text="Sunrise" />
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginStart="@dimen/sunset_marginStart">

                    <TextView
                        android:id="@+id/tv_Sunset"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/sunset"
                        android:textColor="@color/primary_text_color"
                        android:textSize="@dimen/label_text_size"
                        android:textStyle="bold"
                        tools:text="Sunset" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/sunset_marginStart"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_sunset"
                            android:layout_width="@dimen/identification_image_size"
                            android:layout_height="@dimen/identification_image_size"
                            android:layout_marginEnd="@dimen/identification_image_marginEnd"
                            android:contentDescription="@string/image_contentDescription"
                            app:srcCompat="@drawable/sunset" />

                        <TextView
                            android:id="@+id/tv_sunset_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/secondary_text_color"
                            android:textSize="@dimen/value_text_size"
                            tools:text="Sunset" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>